--- a/r-js-1/package.json
+++ b/r-js-1/package.json
@@ -3,18 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/three": "^0.150.1",
     "ahooks": "^3.7.6",
     "antd": "^5.4.1",
+    "echarts": "^5.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.62.1",
     "three": "^0.151.3",
     "three-orbitcontrols": "^2.110.3",
     "web-vitals": "^2.1.4"
